--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="src/assets/cute-cartoon-robot-icon-blue-circle-ai-assistant-concept-friendly-great-ui-ux-concepts-380188415.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUIk9en-Ch5DWGowINUtW7yNSuKrFXn5H8Pw&s" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
